<resources>
    <string name="app_name">Aprender es divertido</string>
    <!--Textos para la pantalla principal-->
    <string name="titulo">Funny Math´s</string>
    <string name="resumen">¿Qué es?
        <br>Es una aplicación que promueve el aprendizaje de la suma de manera llamativa, divertida y sencilla.
    Tomando en cuenta que esta dirigida para niños de 3 a 5 años.</br></string>
    <string name="b_main">Jugar</string>

    <!--Operaciones-->
    <string name="suma">+</string>

    <!--Login-->
    <string name="entrada_logn">Ingresa tu nombre:</string>
    <string name="btn_comenzar">Comenzar</string>
    <string name="salida_record"> </string>

    <!--niveles-->
    <string name="vidas">Estrellas: </string>
    <string name="jugador_nombre">Jugador: </string>
    <string name="total_score">Score: </string>
    <string name="btn_comprobar">Comprobar: </string>
    <string name="s_txt_comprobar">Respuesta: </string>
    <string name="i_txt_comprobar">¿Sabes la respuesta?</string>
    <string name="b_comprobar">Comprobar</string>
</resources>