<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondohoja"
    tools:context=".suma1">

    <TextView
        android:id="@+id/t_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/black"
        android:fontFamily="cursive"
        android:shadowColor="@color/black"
        android:text="@string/jugador_nombre"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:fontFamily="cursive"
        android:shadowColor="@color/black"
        android:text="@string/total_score"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_nombre" />

    <TextView
        android:id="@+id/t_estrella"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:fontFamily="cursive"
        android:shadowColor="@color/black"
        android:text="@string/vidas"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_score" />

    <ImageView
        android:id="@+id/img_num_uno"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="260dp"
        app:layout_constraintEnd_toStartOf="@+id/img_operacion"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animal2" />

    <ImageView
        android:id="@+id/img_num_dos"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_operacion"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animal2" />

    <ImageView
        android:id="@+id/img_operacion"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469"
        app:srcCompat="@drawable/operacion1" />

    <EditText
        android:id="@+id/i_text_verificar"
        android:layout_width="182dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/black"
        android:ems="15"
        android:hint="@string/i_txt_comprobar"
        android:inputType="number"
        android:shadowColor="@color/black"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <Button
        android:id="@+id/b_comprobar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_color"
        android:onClick="Comprobar"
        android:text="@string/b_comprobar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/i_text_verificar"
        app:layout_constraintVertical_bias="0.611" />

    <ImageView
        android:id="@+id/img_estrellas"
        android:layout_width="99dp"
        android:layout_height="40dp"
        android:layout_marginTop="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toEndOf="@+id/t_estrella"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vida3" />

</androidx.constraintlayout.widget.ConstraintLayout>